cmake_minimum_required(VERSION 3.4)
project (ddup)
include_directories("/Users/tomwang/github/ddup_github/include")
include_directories("/usr/local/include")
add_executable(ddup main.cpp classification_sample.h main_ex.cpp mogu_openvino.cpp mogu_openvino.h mogu_openvino_jni.cpp mogu_openvino_jni.h)
